--- a/force-app/main/default/classes/LeaveCalculateHandler.cls
+++ b/force-app/main/default/classes/LeaveCalculateHandler.cls
@@ -39,10 +39,11 @@ public without sharing class LeaveCalculateHandler implements TriggerAction.Afte
                                             From EMS_LM_Leave_History__c 
                       						where EMS_LM_Contact__c=:setId 
                                             		And CreatedDate = This_Year 
-                                            		AND (EMS_LM_Status__c='Pending' 
-                                                     	OR EMS_LM_Status__c='Approved' 
-                                                     	OR EMS_LM_Status__c='Waiting For Approver 2' 
-                                                     	OR EMS_LM_Status__c='Waiting For Approver 3')];
+                                            		AND (EMS_LM_Status__c =: LeaveRequestConstant.PENDING 
+                                                     	OR EMS_LM_Status__c=: LeaveRequestConstant.APPROVED 
+                                                     	OR EMS_LM_Status__c=: LeaveRequestConstant.APPROVER_2_WAITING  
+                                                     	OR EMS_LM_Status__c=: LeaveRequestConstant.APPROVER_3_WAITING 
+                                                        OR EMS_LM_Status__c=: LeaveRequestConstant.APPROVER_4_WAITING)];
        
        //AND (EMS_LM_Leave_Type_Name__c = 'Annual Leave' OR EMS_LM_Leave_Type_Name__c ='Compensatory Off')
         
@@ -56,56 +57,56 @@ public without sharing class LeaveCalculateHandler implements TriggerAction.Afte
        Decimal utilizedLossOfPay = 0;
        Decimal utilizedWorkfromhome = 0;
         for(EMS_LM_Leave_History__c l2 : l1){
-                  if(l2.EMS_LM_Leave_Type_Name__c == 'Annual Leave' && l2.EMS_LM_Leave_Duration__c !=Null  && (l2.EMS_LM_Status__c=='Pending' || 
-              																					l2.EMS_LM_Status__c=='Approved' || 
-                                                                                              	l2.EMS_LM_Status__c=='Waiting For Approver 2'|| 
-                                                                                               	l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+                  if(l2.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.ANNUAL_LEAVE && l2.EMS_LM_Leave_Duration__c !=Null  && 
+                     (l2.EMS_LM_Status__c== LeaveRequestConstant.PENDING || l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED  || 
+                                                                                              	l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING|| 
+                                                                                               	l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                   {
                       Utilized_Leaves = Utilized_Leaves + l2.EMS_LM_Leave_Duration__c;
                   } 
-            	if(l2.EMS_LM_Leave_Type_Name__c == 'Compensatory Off' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            	if(l2.EMS_LM_Leave_Type_Name__c == 'Compensatory Off' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedcompoffLeave = utilizedcompoffLeave + l2.EMS_LM_Leave_Duration__c;
                   }
-            	if(l2.EMS_LM_Leave_Type_Name__c == 'Maternity Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            	if(l2.EMS_LM_Leave_Type_Name__c == 'Maternity Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedMaternityLeave = utilizedMaternityLeave + l2.EMS_LM_Leave_Duration__c;
                   }
             //Paternity Leave
-            if(l2.EMS_LM_Leave_Type_Name__c == 'Paternity Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            if(l2.EMS_LM_Leave_Type_Name__c == 'Paternity Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedPaternityLeave = utilizedPaternityLeave + l2.EMS_LM_Leave_Duration__c;
                   }
             
-            if(l2.EMS_LM_Leave_Type_Name__c == 'Bereavement Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            if(l2.EMS_LM_Leave_Type_Name__c == 'Bereavement Leave' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedBereavementLeave = utilizedBereavementLeave + l2.EMS_LM_Leave_Duration__c;
                   }
             
-            if(l2.EMS_LM_Leave_Type_Name__c == 'Loss of Pay' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            if(l2.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.LOSS_OF_PAY && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING ||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedLossOfPay = utilizedLossOfPay + l2.EMS_LM_Leave_Duration__c;
                   }
             
-            if(l2.EMS_LM_Leave_Type_Name__c == 'Work from Home' && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c=='Pending' || 
-                                                                        l2.EMS_LM_Status__c=='Approved' || 
-                                                                        l2.EMS_LM_Status__c=='Waiting For Approver 2'||
-                                                                       l2.EMS_LM_Status__c=='Waiting For Approver 3'))
+            if(l2.EMS_LM_Leave_Type_Name__c == LeaveRequestConstant.WORK_FROM_HOME && l2.EMS_LM_Leave_Duration__c !=Null && (l2.EMS_LM_Status__c==LeaveRequestConstant.PENDING || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVED || 
+                                                                        l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_2_WAITING||
+                                                                       l2.EMS_LM_Status__c==LeaveRequestConstant.APPROVER_3_WAITING))
                 {
                       utilizedWorkfromhome = utilizedWorkfromhome + l2.EMS_LM_Leave_Duration__c;
                   }
